# Waffle

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  GRAMMAR.md  Grammar.ebnf  LICENSE  README.md  Thirdparty.cmake  wb.py
.github/workflows/: BuildAndTest  BuildAndTest.yaml
Libs/Lexer/: CMakeLists.txt
Libs/Lexer/include/Lexer/: Lexer.h  Types.h
Libs/Lexer/src/Lexer/: Lexer.cpp  Types.cpp
Libs/Lexer/test/: CMakeLists.txt  main.cpp
Libs/Parser/: CMakeLists.txt
Libs/Parser/src/Parser/: Parser.cpp
Libs/Parser/test/: CMakeLists.txt  main.cpp
